<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.qr.codigo.lector.lectorcodigoqr.DatosActivity">



    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        custom:auto_cycle="true"
        custom:indicator_visibility="visible"
        custom:pager_animation="Accordion"
        custom:pager_animation_span="1100"
        android:layout_margin="10dp"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/lblNombreObra"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/lblnombreObra" />
                <TextView
                    android:id="@+id/txtNombreObra"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/nombreObra" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/txtlblDescripcion"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/lblDescripcion" />
                <TextView
                    android:id="@+id/txtDescripcion"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/obraDescripcion" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/txtlblFechaInicio"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/lblfechaInicio" />
                <TextView
                    android:id="@+id/txtFechaInicio"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/fechaInicio" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/txtlblFConclusion"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/lblfechaConclusion" />
                <TextView
                    android:id="@+id/txtFConclusion"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/fechaConclusion" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/txtlblTipolicitacion"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/lbltipoLicitacion" />
                <TextView
                    android:id="@+id/txtTipolicitacion"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/tipoLicitacion" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/txtlblempresa"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/lblempresa" />
                <TextView
                    android:id="@+id/txtempresa"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/empresa" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/txtlblcontrato"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/lblnoContrato"/>

                <TextView
                    android:id="@+id/txtcontrato"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/noContrato" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/txtlblmonto"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/lblmonto" />

                <TextView
                    android:id="@+id/txtmonto"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/monto" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAcptar"/>


</LinearLayout>
